--- a/app/src/main/res/layout/item_services.xml
+++ b/app/src/main/res/layout/item_services.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="@dimen/_100sdp"
+    android:layout_height="@dimen/_100sdp"
     android:layout_marginStart="@dimen/_15sdp"
-    android:layout_marginBottom="@dimen/_10sdp">
+    android:layout_marginBottom="@dimen/_10sdp"
+    android:background="@drawable/bg_sky_blue_10dp"
+    android:elevation="@dimen/_5sdp"
+    android:orientation="vertical">
 
-    <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/image_service"
-        android:layout_width="@dimen/_100sdp"
-        android:layout_height="@dimen/_100sdp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/feedingactive" />
 
     <TextView
         android:id="@+id/tv_service"
@@ -18,7 +15,20 @@
         android:layout_marginStart="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_5sdp"
         android:text="@string/feeding"
-        android:textColor="@color/theme_Color" />
+        android:textSize="@dimen/_10sdp"
+        android:textColor="@color/white" />
 
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/ivService"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon3" />
+    </LinearLayout>
+
+</LinearLayout>
