--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -79,7 +79,7 @@
                 android:id="@+id/login"
                 style="@style/ButtonMatch"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:background="@drawable/button_bg_10dp"
+                android:background="@drawable/bg_sky_blue_10dp"
                 android:contentDescription="@string/image"
                 android:onClick="@{(view)-> forgotVM.onClick(view,`btnSubmit`)}"
                 android:text="@string/submit" />
