--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -110,7 +110,7 @@
                     android:id="@+id/login"
                     style="@style/ButtonMatch"
                     android:layout_marginTop="@dimen/_20sdp"
-                    android:background="@drawable/button_bg_10dp"
+                    android:background="@drawable/bg_sky_blue_10dp"
                     android:contentDescription="@string/image"
                     android:onClick="@{(view)-> loginVM.onClick(view,`btnSignIn`)}"
                     android:text="@string/sign_in" />
