--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -64,7 +64,7 @@
                 android:layout_marginTop="@dimen/_150sdp"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
-                android:background="@drawable/button_bg_10dp"
+                android:background="@drawable/bg_sky_blue_10dp"
                 android:contentDescription="@string/image"
                 android:text="Edit Profile" />
 
