--- a/app/src/main/res/layout/activity_your_pet_detail.xml
+++ b/app/src/main/res/layout/activity_your_pet_detail.xml
@@ -59,67 +59,114 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="2"
-            android:orientation="horizontal">
-            <EditText
-                style="@style/MatchEditText"
-                android:layout_width="0dp"
-                android:background="@drawable/bg_edit_text"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_weight="1"
-                android:text="Gender"
-                android:drawableEnd="@drawable/down_blue"
-                android:paddingStart="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
-                android:paddingEnd="@dimen/_10sdp"/>
-            <EditText
-                style="@style/MatchEditText"
-                android:layout_width="0dp"
-                android:background="@drawable/bg_edit_text"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:text="Age"
-                android:layout_weight="1"
-                android:drawableEnd="@drawable/down_blue"
-                android:paddingStart="@dimen/_10sdp"
-                android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
-                android:paddingEnd="@dimen/_10sdp"/>
+            android:layout_marginTop="@dimen/_10sdp"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weightSum="2"
-            android:orientation="horizontal">
-            <EditText
-                style="@style/MatchEditText"
+            <LinearLayout
                 android:layout_width="0dp"
-                android:background="@drawable/bg_edit_text"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/_5sdp"
                 android:layout_weight="1"
-                android:text="Weight"
-                android:paddingStart="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:imeOptions="actionNext"
-                android:drawableEnd="@drawable/down_blue"
-                android:inputType="textEmailAddress"
-                android:paddingEnd="@dimen/_10sdp"/>
-            <EditText
-                style="@style/MatchEditText"
-                android:layout_width="0dp"
-                android:background="@drawable/bg_edit_text"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:text="Breed"
-                android:layout_weight="1"
-                android:paddingStart="@dimen/_10sdp"
-                android:imeOptions="actionNext"
-                android:drawableEnd="@drawable/down_blue"
-                android:inputType="textEmailAddress"
-                android:paddingEnd="@dimen/_10sdp"/>
+                android:orientation="vertical">
 
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:background="@drawable/bg_edit_text">
+
+                    <Spinner
+                        android:id="@+id/spinnerGender"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@null" />
+
+
+                    <ImageView
+                        android:layout_width="@dimen/_8sdp"
+                        android:layout_height="@dimen/_8sdp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        android:src="@drawable/downaero" />
+
+                </RelativeLayout>
+
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:background="@drawable/bg_edit_text">
+
+                    <Spinner
+                        android:id="@+id/spinnerWeight"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@null" />
+
+
+                    <ImageView
+                        android:layout_width="@dimen/_8sdp"
+                        android:layout_height="@dimen/_8sdp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        android:src="@drawable/downaero" />
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:background="@drawable/bg_edit_text">
+
+                    <Spinner
+                        android:id="@+id/spinnerAge"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@null" />
+
+
+                    <ImageView
+                        android:layout_width="@dimen/_8sdp"
+                        android:layout_height="@dimen/_8sdp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        android:src="@drawable/downaero" />
+
+
+                </RelativeLayout>
+
+
+                <EditText
+                    style="@style/MatchEditText"
+                    android:background="@drawable/bg_edit_text"
+                    android:hint="@string/breed"
+                    android:imeOptions="actionDone"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:inputType="textEmailAddress"
+                    android:paddingStart="@dimen/_10sdp"
+                    android:paddingEnd="@dimen/_10sdp" />
+
+
+            </LinearLayout>
         </LinearLayout>
+
         <EditText
             style="@style/MatchEditText"
             android:background="@drawable/bg_edit_text"
@@ -140,7 +187,7 @@
             android:id="@+id/btnPetDetail"
             style="@style/ButtonMatch"
             android:layout_margin="@dimen/_20sdp"
-            android:background="@drawable/button_bg_10dp"
+            android:background="@drawable/bg_sky_blue_10dp"
             android:contentDescription="@string/image"
             android:text="@string/submit" />
 
