--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,7 @@
             android:layout_height="match_parent">
 
             <RelativeLayout
-                android:id="@+id/rl_choose_pet"
+                android:id="@+id/rlChoosePet"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_30sdp"
                 android:layout_alignParentStart="true"
