--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,14 +24,15 @@
     </style>
 
     <style name="BottomNavigationViewInActive" parent="Widget.Design.BottomNavigationView">
-    <item name="android:textColor">@color/grey</item>
-    <item name="android:textSize">@dimen/_10sdp</item>
-    <item name="fontFamily">@font/opensans_regular</item>
+        <item name="android:textColor">@color/grey</item>
+        <item name="android:textSize">@dimen/_10sdp</item>
+        <item name="fontFamily">@font/opensans_regular</item>
     </style>
+
     <style name="WrapTextView" parent="Widget.AppCompat.TextView">
-        <item name="fontFamily">@font/opensans_semibold</item>
+        <item name="android:fontFamily">@font/opensans_semibold</item>
         <item name="android:layout_width">wrap_content</item>
-       <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/_12sdp</item>
         <item name="android:textColor">@color/black</item>
     </style>
@@ -39,7 +40,7 @@
     <style name="MatchTextView" parent="Widget.AppCompat.TextView">
         <item name="fontFamily">@font/opensans_semibold</item>
         <item name="android:layout_width">match_parent</item>
-       <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/_12sdp</item>
         <item name="android:textColor">@color/black</item>
     </style>
@@ -49,6 +50,7 @@
         <item name="android:textSize">@dimen/_12sdp</item>
         <item name="android:textColor">@color/black</item>
     </style>
+
     <style name="MatchEditText" parent="Widget.AppCompat.EditText">
         <item name="android:layout_height">@dimen/_35sdp</item>
         <item name="android:layout_width">match_parent</item>
